--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ a:hover {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -33,11 +37,15 @@ h1 {
   line-height: 1.1;
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+
+h2,h3,h4,h5,h6 {
+  font-size: 1.2em;
+  line-height: 1.1;
+}
+
+#userList {
+  max-height: 200px;
+  overflow-y: scroll
 }
 
 .logo {
