--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,7 +45,22 @@ h2,h3,h4,h5,h6 {
 
 #userList {
   max-height: 200px;
-  overflow-y: scroll
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  overflow-y: scroll;
+  background-color: #1a1a1a;
+  border-radius: 15px;
+}
+
+#userGreeting {
+  max-width: 300px;
+  overflow-x: scroll;
+  padding: 0.2rem 1rem 0.2rem 1rem;
+  background-color: #1a1a1a;
+  border-radius: 15px;
+}
+
+#userGreeting p{
+ font-size: 1rem;
 }
 
 .logo {
@@ -71,6 +86,7 @@ h2,h3,h4,h5,h6 {
 
 button {
   border-radius: 8px;
+  color: white;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
@@ -88,7 +104,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -99,5 +115,5 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
